--- a/package.json
+++ b/package.json
@@ -24,14 +24,13 @@
     "@types/react-router-dom": "^4.3.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "fstream": "^1.0.12",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "npm": "^6.8.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-observable": "^1.0.0",
-    "rxjs": "^6.4.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "typescript": "^3.3.3333",
