--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-router-dom": "^4.3.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "fstream": "^1.0.12",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
