--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --config webpack.config.js",
-    "build": "webpack --mode production --config webpack.config.js"
+    "start": "node server/index.js",
+    "develop": "webpack-dev-server --mode development --config webpack.config.js",
+    "build": "webpack --mode production --config webpack.config.js && cp -r assets dist/assets",
+    "deploy": "npm run build && gcloud app deploy",
+    "browse": "gcloud app browse"
   },
   "author": "Zeeshan Abid",
   "license": "MIT",
@@ -40,6 +43,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1"
