--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.19",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
