--- a/package.json
+++ b/package.json
@@ -1,51 +1,44 @@
 {
   "name": "zeeshan-abid.com",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+  "version": "1.0.0",
+  "description": "My Portfolio",
+  "homepage": "https://github.com/zeeshan595/zeeshan-abid.com#readme",
+  "bugs": {
+    "url": "https://github.com/zeeshan595/zeeshan-abid.com/issues"
   },
-  "dependencies": {
-    "core-js": "^3.30.1",
-    "vue": "^3.2.47"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zeeshan595/zeeshan-abid.com.git"
+  },
+  "license": "MIT",
+  "author": "Zeeshan Abid",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-eslint": "^5.0.8",
-    "@vue/cli-plugin-pwa": "^5.0.8",
-    "@vue/cli-plugin-router": "^5.0.8",
-    "@vue/cli-plugin-typescript": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
-    "@vue/compiler-sfc": "^3.2.47",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "eslint": "^8.39.0",
-    "eslint-plugin-vue": "^9.11.0",
-    "sass": "^1.62.0",
-    "sass-loader": "^13.2.2",
-    "typescript": "^5.0.4"
+    "@eslint/js": "^9.37.0",
+    "@types/node": "^24.7.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.0.4",
+    "eslint": "^9.37.0",
+    "eslint-plugin-react-hooks": "^7.0.0",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.4.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1",
+    "vite": "^7.1.10"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended",
-      "@vue/typescript/recommended"
-    ],
-    "parserOptions": {
-      "ecmaVersion": "latest"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
+    "framer-motion": "^12.23.24",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.4",
+    "tailwindcss": "^4.1.14"
+  }
 }
