--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/react-router-hash-link": "^2.4.9",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.37.0",
     "eslint-plugin-react-hooks": "^7.0.0",
@@ -39,6 +40,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4",
+    "react-router-hash-link": "^2.4.3",
     "tailwindcss": "^4.1.14"
   }
 }
